<resources>
    <string name="app_name">TodoIt</string>
    <string name="task_name">Task Name</string>
    <string name="task_description">Task Description</string>
    <string name="add">Add Task</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="allTasks">View All Tasks</string>
    <string name="start_date">Start Date</string>
</resources>
